openshift/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: vpmc-next-frontend
  name: vpmc-next-frontend
  namespace: poc-jim-chang-vpmc-com-tw
spec:
  type: ClusterIP
  ports:
    - name: 3000-tcp
      port: 3000
      targetPort: 3000
      protocol: TCP
  selector:
    app: vpmc-next-frontend
