openshift/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: vpmc-next-frontend
  name: vpmc-next-frontend
  namespace: poc-jim-chang-vpmc-com-tw
spec:
  host: vpmc-next-frontend-poc-jim-chang-vpmc-com-tw.apps.poc-caas-ca002.hk.net
  to:
    kind: Service
    name: vpmc-next-frontend
    weight: 100
  port:
    targetPort: 3000-tcp
  wildcardPolicy: None
